--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ springdoc.swagger-ui.enabled=true
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mydatabase
+
+#Settin up Actuators
+management.endpoints.web.exposure.include=*
+springdoc.show-actuator=true
